# Snake-Battle

./: .gitignore  CMakeLists.txt  ai.c  ai.h  bot.c  display.c  display.h  high_score.txt  high_scores.txt  logic.c  logic.h  main.c  milan.c  playgame.c  playgame.h  timer.h  timers.c
